tests/type-errors/no_builtin_for_collection.arl
archetype expr_lit_col

variable res : int collection = []

action exec () {
  effect {
    res := [1; 2; 3]
  }
}
